crates/sui-prover/tests/snapshots/issue-362.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 267
expression: output
---
exiting with bytecode transformation errors
error: Quantifiers not allowed in pure functions yet
   ┌─ tests/inputs/issue-362.move:13:53
   │
13 │         i <= v.length() && !any_range!(v, 0, i, |x| is_odd(x))
   │                                                     ^^^^^^^^^
